--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <
+    </head>
+    <body>
+        <div>
+            <form>
+                <input type="text" title="Nombre">
+                <input type="text" title="apellidos">
+                <input type="date" title="fecha de nacimiento">
+                <select name="Genero" >
+                    <option value="123456789" selected>Genero</option>
+                    <option value="Hombre">Hombre</option>
+                    <option value="Mujer">Mujer</option>
+                  </select>
+            </form>
+        </div>
+    </body>
+</html>
