--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -13,7 +13,15 @@
                     <option value="123456789" selected>Genero</option>
                     <option value="Hombre">Hombre</option>
                     <option value="Mujer">Mujer</option>
-                  </select>
+                </select>
+                <input type="text" title="Nacionalidad">
+                <select name="tipo de identificacion">
+                    <option value="987654321" selected>seleccionar tipo de identificacion</option>
+                    <option value="NIE">NIE</option>
+                    <option value="NIF">NIF</option>
+                </select>
+                <input title="Numero de identificacion" type="text">
+                <input title="estado civil" type="text">
             </form>
         </div>
     </body>
