--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <
-    </head>
-    <body>
-        <div>
-            <form>
-                <input type="text" title="Nombre">
-                <input type="text" title="apellidos">
-                <input type="date" title="fecha de nacimiento">
-                <select name="Genero" >
+
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div>
+        <form>
+            <div class=""><input type="text" title="Nombre"></div>
+            <div><input type="text" title="apellidos"></div>
+            <div><input type="date" title="fecha de nacimiento"></div>
+            <div><select name="Genero">
                     <option value="123456789" selected>Genero</option>
                     <option value="Hombre">Hombre</option>
                     <option value="Mujer">Mujer</option>
-                </select>
-                <input type="text" title="Nacionalidad">
-                <select name="tipo de identificacion">
+                </select></div>
+            <div><input type="text" title="Nacionalidad"></div>
+            <div><select name="tipo de identificacion">
                     <option value="987654321" selected>seleccionar tipo de identificacion</option>
                     <option value="NIE">NIE</option>
                     <option value="NIF">NIF</option>
-                </select>
-                <input title="Numero de identificacion" type="text">
-                <input title="estado civil" type="text">
-            </form>
-        </div>
-    </body>
+                </select></div>
+            <div><input title="Numero de identificacion" type="text"></div>
+            <div><input title="estado civil" type="text"></div>
+          
+
+
+
+
+
+        </form>
+    </div>
+</body>
+
 </html>
