--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -4,25 +4,40 @@
         <
     </head>
     <body>
-        <div>
-            <form>
-                <input type="text" title="Nombre">
-                <input type="text" title="apellidos">
-                <input type="date" title="fecha de nacimiento">
-                <select name="Genero" >
-                    <option value="123456789" selected>Genero</option>
-                    <option value="Hombre">Hombre</option>
-                    <option value="Mujer">Mujer</option>
-                </select>
-                <input type="text" title="Nacionalidad">
-                <select name="tipo de identificacion">
-                    <option value="987654321" selected>seleccionar tipo de identificacion</option>
-                    <option value="NIE">NIE</option>
-                    <option value="NIF">NIF</option>
-                </select>
-                <input title="Numero de identificacion" type="text">
-                <input title="estado civil" type="text">
-            </form>
+        <div class="container">
+            <div class="container-fluid" id="cabecera">
+                <div class="row jusitfy-content-center">
+                    <div class="col-12">
+                        <a href="#">
+                            <img src="../media/IMDBlogo.png" alt="IMDBlogo">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid" id="formPersonales">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <form>
+                            <input type="text" title="Nombre">
+                            <input type="text" title="apellidos">
+                            <input type="date" title="fecha de nacimiento">
+                            <select name="Genero" >
+                                <option value="123456789" selected>Genero</option>
+                                <option value="Hombre">Hombre</option>
+                                <option value="Mujer">Mujer</option>
+                            </select>
+                            <input type="text" title="Nacionalidad">
+                            <select name="tipo de identificacion">
+                                <option value="987654321" selected>seleccionar tipo de identificacion</option>
+                                <option value="NIE">NIE</option>
+                                <option value="NIF">NIF</option>
+                            </select>
+                            <input title="Numero de identificacion" type="text">
+                            <input title="estado civil" type="text">
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
