--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -17,7 +17,8 @@
 
             <div class="col-12 bg-white py-3" id="formContenedor">
                 <div class="row justify-content-center">
-                    <div class="col-12 col-md-6 col-lg-3 text-black py-3 text-center" id="formPersonal">
+                    <div class="col-12 col-md-6 col-lg-3 text-black py-3" id="formPersonal">
+                        <h2>Datos personales</h2>
                         <form>
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre</label>
