--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/styles.css">
-        <title>IMDB</title>
-    </head>
-    <body>
-        <div class="container-fluid vh-100 d-flex flex-column justify-content-start align-items-center">
-            <div class="w-100 text-center py-4" id="header">
-                <a href="#">
-                    <img src="https://m.media-amazon.com/images/G/01/imdb/authportal/images/www_imdb_logo._CB667618033_.png" alt="IMDBlogo" class="img-fluid">
-                </a>
-            </div>
 
-            <div class="col-12 bg-white py-3" id="formContenedor">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-md-6 col-lg-3 text-black py-3" id="formPersonal">
-                        <h2>Datos personales</h2>
-                        <form>
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>IMDB</title>
+</head>
+
+<body>
+    <div class="container-fluid vh-100 d-flex flex-column justify-content-start align-items-center">
+        <div class="w-100 text-center py-4" id="header">
+            <a href="#">
+                <img src="https://m.media-amazon.com/images/G/01/imdb/authportal/images/www_imdb_logo._CB667618033_.png"
+                    alt="IMDBlogo" class="img-fluid">
+            </a>
+        </div>
+
+        <div class="col-12 bg-white py-3" id="formContenedor">
+            <div class="row justify-content-center">
+                <div class="col-lg-12 col-md-6 col-sm-3 text-black py-3" id="formPersonal">
+                    <form id="formulario">
+                        <div id="Seccion" class="col-lg-3 col-md-6 col-sm-12">
+                            <h2>Datos personales</h2>
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre</label>
                                 <input type="text" id="nombre" title="Nombre" class="form-control">
@@ -30,7 +35,8 @@
                             </div>
                             <div class="mb-3">
                                 <label for="fechaNacimiento" class="form-label">Fecha de Nacimiento</label>
-                                <input type="date" id="fechaNacimiento" title="fecha de nacimiento" class="form-control">
+                                <input type="date" id="fechaNacimiento" title="fecha de nacimiento"
+                                    class="form-control">
                             </div>
                             <div class="mb-3">
                                 <label for="genero" class="form-label">Género</label>
@@ -50,45 +56,68 @@
                                     <option value="987654321" selected>Seleccionar tipo de identificación</option>
                                     <option value="NIE">NIE</option>
                                     <option value="NIF">NIF</option>
+                                    <option value="Pasaporte">Pasaporte</option>
                                 </select>
                             </div>
                             <div class="mb-3">
                                 <label for="numeroIdentificacion" class="form-label">Número de Identificación</label>
-                                <input type="text" id="numeroIdentificacion" title="Número de identificación" class="form-control">
+                                <input type="text" id="numeroIdentificacion" title="Número de identificación"
+                                    class="form-control">
                             </div>
                             <div class="mb-3">
                                 <label for="estadoCivil" class="form-label">Estado Civil</label>
                                 <input type="text" id="estadoCivil" title="Estado civil" class="form-control">
                             </div>
+                        </div>
+                        <div id="Seccion">
+                            <h2>Datos de contacto</h2>
+                            <div class="mb-3">
+                                <label>Tel&eacute;fono m&oacute;vil</label>
+                                <input type="number" id="telefonoMovil" title="Telefono movil" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Tel&eacute;fono fijo</label>
+                                <input type="number" id="telefonoFijo" title="Telefono fijo" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Correo electronico</label>
+                                <input type="email" id="correoElectronico" title="Correo Electronico" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12" id="botonEnviar">
                             <button type="submit" class="btn btn-primary w-100">Enviar</button>
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-
-            <div class="col-12 bg-light pt-3" id="footer">
-                <div class="row text-center justify-content-center">
-                    <div class="col-12 col-md-6 col-lg-3 text-white py-3 text-center">
-                        <a href="#" class="text-decoration-none me-3">
-                            Help
-                        </a>
-                        <a href="#" class="text-decoration-none me-3">
-                            Conditions of Use
-                        </a>
-                        <a href="#" class="text-decoration-none">
-                           Privacy Notice
-                        </a>
-                    </div>
-                </div>
-                <div class="row text-center justify-content-center">
-                    <div class="col-12 col-md-6 col-lg-3 text-grey py-3 text-center">
-                        © 1996-2024, Amazon.com, Inc. or its affiliates
-                    </div>
-                </div>
-            </div>
-            
         </div>
-    </body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/main.js"></script>
+        <!--Footer-->
+        <div class="col-12 bg-light pt-3" id="footer">
+            <div class="row text-center justify-content-center">
+                <div class="col-12 col-md-6 col-lg-3 text-white py-3 text-center">
+                    <a href="#" class="text-decoration-none me-3">
+                        Help
+                    </a>
+                    <a href="#" class="text-decoration-none me-3">
+                        Conditions of Use
+                    </a>
+                    <a href="#" class="text-decoration-none">
+                        Privacy Notice
+                    </a>
+                </div>
+            </div>
+            <div class="row text-center justify-content-center">
+                <div class="col-12 col-md-6 col-lg-3 text-grey py-3 text-center">
+                    © 1996-2024, Amazon.com, Inc. or its affiliates
+                </div>
+            </div>
+        </div>
+
+    </div>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<script src="../js/main.js"></script>
+
 </html>
