--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -21,9 +21,9 @@
 
         <div class="col-12 bg-white py-3" id="formContenedor">
             <div class="row justify-content-center">
-                <div class="col-lg-12 col-md-6 col-sm-3 text-black py-3" id="formPersonal">
+                <div class="col-lg-12 col-md-6 col-sm-3 text-black py-3" id="primeraFila">
                     <form id="formulario">
-                        <div id="Seccion" class="col-lg-3 col-md-6 col-sm-12">
+                        <div id="seccion" class="col-lg-3 col-md-6 col-sm-12">
                             <h2>Datos personales</h2>
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre</label>
@@ -69,19 +69,74 @@
                                 <input type="text" id="estadoCivil" title="Estado civil" class="form-control">
                             </div>
                         </div>
-                        <div id="Seccion">
+                        <div id="seccion">
                             <h2>Datos de contacto</h2>
                             <div class="mb-3">
                                 <label>Tel&eacute;fono m&oacute;vil</label>
-                                <input type="number" id="telefonoMovil" title="Telefono movil" class="form-control">
+                                <input type="text" id="telefonoMovil" title="Telefono movil" class="form-control">
                             </div>
                             <div class="mb-3">
                                 <label>Tel&eacute;fono fijo</label>
-                                <input type="number" id="telefonoFijo" title="Telefono fijo" class="form-control">
+                                <input type="text" id="telefonoFijo" title="Telefono fijo" class="form-control">
                             </div>
                             <div class="mb-3">
                                 <label>Correo electronico</label>
                                 <input type="email" id="correoElectronico" title="Correo Electronico" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Perfil de Linkedin</label>
+                                <input type="text" id="perfilLinkedin" title="Perfil Linkedin" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Perfil de Twitter</label>
+                                <input type="text" id="perfilTwitter" title="Perfil Twitter" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Sitio web personal</label>
+                                <input type="text" id="webPersonal" title="Web personal" class="form-control">
+                            </div>
+                        </div>
+                        <div id="seccion">
+                            <h2>Direccion</h2>
+                            <div class="mb-3">
+                                <label for="via" class="form-label">Via</label>
+                                <select id="via" name="via" class="form-select">
+                                    <option value="calle" selected>Calle</option>
+                                    <option value="avenida">Avenida</option>
+                                    <option value="paseo">Paseo</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label>Nombre de via</label>
+                                <input type="text" id="nombreVia" title="Nombre de via" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Numero</label>
+                                <input type="text" id="numeroDireccion" title="Numero de direccion" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Piso</label>
+                                <input type="text" id="piso" title="Piso" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Puerta</label>
+                                <input type="text" id="puerta" title="Puerta" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Vivienda</label>
+                                <select id="vivienda" name="vivienda" class="form-select">
+                                    <option value="calle" selected>Piso</option>
+                                    <option value="avenida">Casa</option>
+                                    <option value="paseo">Chalet</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label>Codigo postal</label>
+                                <input type="text" id="codigoPostal" title="Codigo Postal" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label>Provincia</label>
+                                
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12" id="botonEnviar">
