--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -18,7 +18,43 @@
                     alt="IMDBlogo" class="img-fluid">
             </a>
         </div>
-
+        <div class="col-lg-4 col-md-6 col-sm-10" id="listaErrores">
+            <ul>
+                <li id="linombre"></li>
+                <li id="liapellidos"></li>
+                <li id="lifecha"></li>
+                <li id="ligenero"></li>
+                <li id="linacionalidad"></li>
+                <li id="litipoindentificacion"></li>
+                <li id="linumeroindentificacion"></li>
+                <li id="liestadocivil"></li>
+                <li id="limovil"></li>
+                <li id="lifijo"></li>
+                <li id="lilinkedIn"></li>
+                <li id="litwitter"></li>
+                <li id="liweb"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+                <li id="linombre"></li>
+            </ul>
+        </div>
         <div class="col-12 bg-white py-3" id="formContenedor">
             <div class="row justify-content-center">
                 <div class="col-lg-12 col-md-6 col-sm-3 text-black py-3" id="formPersonal">
@@ -41,7 +77,7 @@
                             <div class="mb-3">
                                 <label for="genero" class="form-label">Género</label>
                                 <select id="genero" name="Genero" class="form-select">
-                                    <option value="123456789" selected>Género</option>
+                                    <option value="Género" selected>Género</option>
                                     <option value="Hombre">Hombre</option>
                                     <option value="Mujer">Mujer</option>
                                 </select>
@@ -53,7 +89,7 @@
                             <div class="mb-3">
                                 <label for="tipoIdentificacion" class="form-label">Tipo de Identificación</label>
                                 <select id="tipoIdentificacion" name="tipo de identificacion" class="form-select">
-                                    <option value="987654321" selected>Seleccionar tipo de identificación</option>
+                                    <option value="Seleccionar" selected>Seleccionar tipo de identificación</option>
                                     <option value="NIE">NIE</option>
                                     <option value="NIF">NIF</option>
                                     <option value="Pasaporte">Pasaporte</option>
@@ -73,15 +109,16 @@
                             <h2>Datos de contacto</h2>
                             <div class="mb-3">
                                 <label>Tel&eacute;fono m&oacute;vil</label>
-                                <input type="number" id="telefonoMovil" title="Telefono movil" class="form-control">
+                                <input type="number" id="movil" title="Telefono movil" class="form-control">
                             </div>
                             <div class="mb-3">
                                 <label>Tel&eacute;fono fijo</label>
-                                <input type="number" id="telefonoFijo" title="Telefono fijo" class="form-control">
+                                <input type="number" id="fijo" title="Telefono fijo" class="form-control">
                             </div>
                             <div class="mb-3">
                                 <label>Correo electronico</label>
-                                <input type="email" id="correoElectronico" title="Correo Electronico" class="form-control">
+                                <input type="email" id="correo" title="Correo Electronico"
+                                    class="form-control">
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12" id="botonEnviar">
