--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -23,7 +23,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12 col-md-6 col-sm-3 text-black py-3" id="primeraFila">
                     <form id="formulario">
-                        <div id="seccion" class="col-lg-3 col-md-6 col-sm-12">
+                        <div id="seccion" class="col-lg-4 col-md-6 col-sm-12">
                             <h2>Datos personales</h2>
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre</label>
@@ -69,7 +69,7 @@
                                 <input type="text" id="estadoCivil" title="Estado civil" class="form-control">
                             </div>
                         </div>
-                        <div id="seccion">
+                        <div id="seccion" class="col-lg-4 col-md-6 col-sm-12">
                             <h2>Datos de contacto</h2>
                             <div class="mb-3">
                                 <label>Tel&eacute;fono m&oacute;vil</label>
@@ -97,7 +97,7 @@
                                 <input type="text" id="webPersonal" title="Web personal" class="form-control">
                             </div>
                         </div>
-                        <div id="seccion">
+                        <div id="secciond" class="col-lg-4 col-md-6 col-sm-12">
                             <h2>Direccion</h2>
                             <div class="mb-3">
                                 <label for="via" class="form-label">Via</label>
