--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -18,7 +18,43 @@
                     alt="IMDBlogo" class="img-fluid">
             </a>
         </div>
-
+        <div class="col-lg-4 col-md-6 col-sm-10" id="listaErrores">
+            <ul>
+                <li id="linombre" class="lierror"></li>
+                <li id="liapellidos" class="lierror"></li>
+                <li id="lifecha" class="lierror"></li>
+                <li id="ligenero" class="lierror"></li>
+                <li id="linacionalidad" class="lierror"></li>
+                <li id="litipoindentificacion" class="lierror"></li>
+                <li id="linumeroindentificacion" class="lierror"></li>
+                <li id="liestadocivil" class="lierror"></li>
+                <li id="limovil" class="lierror"></li>
+                <li id="lifijo"class="lierror"></li>
+                <li id="lilinkedIn"class="lierror"></li>
+                <li id="litwitter"class="lierror"></li>
+                <li id="liweb"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+                <li id="linombre"class="lierror"></li>
+            </ul>
+        </div>
         <div class="col-12 bg-white py-3" id="formContenedor">
             <div class="row justify-content-center">
                 <div class="col-lg-12 col-md-6 col-sm-3 text-black py-3" id="primeraFila">
@@ -301,7 +337,7 @@
 
                     
                     <div id="botonEnviar">
-                        <button type="submit" class="btn btn-primary w-100">Enviar</button>
+                        <button type="submit" class="btn btn-primary w-100" id="boton">Enviar</button>
                     </div>
                 </form>
                 </div>
