--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -22,15 +22,15 @@
         <div class="col-lg-4 col-md-6 col-sm-10" id="listaErrores">
             <ul>
                 <li id="linombre" class="lierror">El campo Nombre es obligatorio</li>
-                <li id="liapellidos" class="lierror"></li>
-                <li id="lifecha" class="lierror"></li>
-                <li id="ligenero" class="lierror"></li>
-                <li id="linacionalidad" class="lierror"></li>
-                <li id="litipoindentificacion" class="lierror"></li>
-                <li id="linumeroindentificacion" class="lierror"></li>
-                <li id="liestadocivil" class="lierror"></li>
-                <li id="limovil" class="lierror"></li>
-                <li id="lifijo"class="lierror"></li>
+                <li id="liapellidos" class="lierror">El campo Apellidos es obligatorio</li>
+                <li id="lifecha" class="lierror">Introduce una fecha valida</li>
+                <li id="ligenero" class="lierror">El campo Género es obligatorio</li>
+                <li id="linacionalidad" class="lierror">El campo Nacionalidad es obligatorio</li>
+                <li id="litipoindentificacion" class="lierror">Selecciona tu tipo de indentificacion</li>
+                <li id="linumeroindentificacion" class="lierror">El número de identificacion no es valido</li>
+                <li id="liestadocivil" class="lierror">El campo Estado civil es obligatorio</li>
+                <li id="limovil" class="lierror">Introduce un número de teléfono móvil valido</li>
+                <li id="lifijo"class="lierror">Introduce un número de teléfono fijo valido</li>
                 <li id="lilinkedIn"class="lierror"></li>
                 <li id="litwitter"class="lierror"></li>
                 <li id="liweb"class="lierror"></li>
@@ -421,7 +421,7 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-6 col-lg-4 text-black py-3" id="ultimaFila">
                     <div id="botonEnviar">
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <button type="button" class="btn btn-primary" id="boton">Enviar</button>
                     </div>
                 </div>
             </div>
