--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -33,9 +33,19 @@
                     <li id="limovil" class="list-group-item">Introduce un número de teléfono móvil valido</li>
                     <li id="lifijo" class="list-group-item">Introduce un número de teléfono fijo valido</li>
                     <li id="licorreo" class="list-group-item">Introduce un correo valido</li>
-                    <li id="lilinkedIn" class="list-group-item"></li>
-                    <li id="litwitter" class="list-group-item"></li>
-                    <li id="liweb" class="list-group-item"></li>
+                    <li id="lilinkedIn" class="list-group-item">Introduce un perfil de LinkedIn valido</li>
+                    <li id="litwitter" class="list-group-item">Introduce un perfil de Twitter valido</li>
+                    <li id="liweb" class="list-group-item">El campo Web Personal es obligatorio</li>
+                    <li id="linombrevia" class="list-group-item">El campo Nombre de la via es obligatorio</li>
+                    <li id="linumerodireccion" class="list-group-item">El campo Numero (Direccion) es obligatorio</li>
+                    <li id="licodigopostal" class="list-group-item">El campo Codigo Postal es obligatorio</li>
+                    <li id="linombretitular" class="list-group-item">El campo Nombre Titular es obligatorio</li>
+                    <li id="lifechacaducidad" class="list-group-item">El campo Fecha de caducidad es obligatorio</li>
+                    <li id="licvv" class="list-group-item">El campo CVV es obligatorio</li>
+                    <li id="linombrebanco" class="list-group-item">El campo Nombre del banco es obligatorio</li>
+                    <li id="linumerocuenta" class="list-group-item">Introduce un numero de cuenta valido</li>
+                    <li id="liswift" class="list-group-item">Introduce un Swift/BIC valido</li>
+                    <li id="lisucursal" class="list-group-item">El campo Sucursal es obligatorio</li>
                 </ul>
             </div>
         </div>
@@ -86,7 +96,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="estadoCivil" class="form-label">Estado Civil</label>
-                                <input type="text" id="estadocivil" title="Estado civil" class="form-control">
+                                <input type="text" id="estadoCivil" title="Estado civil" class="form-control">
                             </div>
                         </div>
                 </div>
