--- a/grupo3-IMDB/html/index.html
+++ b/grupo3-IMDB/html/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css">
     <title>IMDB</title>
@@ -20,7 +21,10 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-auto" id="listaErrores">
-                <h3 class="mb-3" id="tituloErrores">Hubo un problema</h3>
+                <div class="d-flex align-items-center mb-2" id="cabeceraErrores">
+                    <i class="bi bi-exclamation-triangle-fill me-2" id="iconoErrores"></i>
+                    <h3 class="mb-3" id="tituloErrores">Hubo un problema</h3>
+                </div>
                 <ul class="list-group">
                     <li id="linombre" class="list-group-item">El campo Nombre es obligatorio</li>
                     <li id="liapellidos" class="list-group-item">El campo Apellidos es obligatorio</li>
@@ -445,7 +449,7 @@
         </div>
     </div>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
